--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
-    "@angular/material": "~10.1.3",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
